[gd_scene load_steps=6 format=3 uid="uid://dn6xsiot3ogq1"]

[ext_resource type="Script" uid="uid://b5m84cx356usk" path="res://Scripts/Characters/SecurityGuard.gd" id="1_nh3vw"]
[ext_resource type="Texture2D" uid="uid://bos3byj3tuvsd" path="res://Art assets/Seguran√ßa.png" id="2_nh3vw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nh3vw"]
size = Vector2(9, 6.75)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rtpcg"]
size = Vector2(53.375, 51.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wasgd"]
size = Vector2(11, 9)

[node name="SecurityGuard" type="CharacterBody2D"]
script = ExtResource("1_nh3vw")

[node name="col_colisor" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 4.375)
shape = SubResource("RectangleShape2D_nh3vw")

[node name="are_hbMouse" type="Area2D" parent="."]

[node name="col_hbMouse" type="CollisionShape2D" parent="are_hbMouse"]
position = Vector2(-1, 0)
shape = SubResource("RectangleShape2D_rtpcg")

[node name="spr_guard" type="Sprite2D" parent="."]
texture = ExtResource("2_nh3vw")
region_enabled = true
region_rect = Rect2(0, 0, 16, 16)

[node name="are_hbAttack" type="Area2D" parent="." groups=["colHbAttack"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="are_hbAttack"]
position = Vector2(0.5, 4.5)
shape = SubResource("RectangleShape2D_wasgd")

[connection signal="mouse_entered" from="are_hbMouse" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="are_hbMouse" to="." method="_on_area_2d_mouse_exited"]
[connection signal="area_entered" from="are_hbAttack" to="." method="_on_are_hb_attack_area_entered"]
[connection signal="area_exited" from="are_hbAttack" to="." method="_on_are_hb_attack_area_exited"]
